# cmake-hello

./: CMakeLists.txt
.github/workflows/: windows.yml
apps/: CMakeLists.txt  main.cpp
hello/: CMakeLists.txt
hello/src/: hello.cpp
tests/: CMakeLists.txt  hellotests.cpp
